fixed wrong font face

--- a/var/www/dan-s.dev/style.css
+++ b/var/www/dan-s.dev/style.css
@@ -686,6 +686,13 @@ background: linear-gradient(to top,
 border-radius: 1rem;
 }
 
+@font-face {
+    font-family: 'Poppins';
+    src: url(./fonts/Poppins-Regular.ttf);
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* ☏ HTML Tags ☏ */
 @media screen and (max-aspect-ratio: 1200/920) {
     @font-face {
